mobile zoom issues fixed and now will display error

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,8 @@
+* {
+  touch-action: manipulation;
+}
 body {
   margin: 0;
   font-size: 18px;
   font-family: 'Roboto', sans-serif;
-  touch-action: manipulation;
 }
