--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   align-items: center;
   height: 100vh;
   background-color: #c2c2d6;
+  touch-action: manipulation;
 }
 .calcContainer {
   width: 400px;
@@ -19,6 +20,7 @@
   font-family: 'Montserrat', sans-serif;
   font-size: 1.5em;
   margin-top: 1em;
+  touch-action: manipulation;
   span {
     color: #004466;
   }
@@ -26,15 +28,18 @@
 #current {
   color: white;
   text-align: right;
+  touch-action: manipulation;
 }
 #equation {
   color: orange;
   font-size: 1.4rem;
   word-wrap: break-word;
+  touch-action: manipulation;
 }
 #display {
   font-size: 1.8rem;
   word-wrap: break-word;
+  touch-action: manipulation;
 }
 .buttons {
   display: grid;
@@ -113,6 +118,7 @@
     color: white;
     font-size: 1.25em;
     font-family: 'Roboto', sans-serif;
+    touch-action: manipulation;
     &:hover {
       color: black;
       outline: 1px solid white;
